<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_filer"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:text="Filter data"
        android:textColor="@color/black"

        android:textSize="15dp"

        app:layout_constraintBottom_toTopOf="@id/main_spn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />


    <Spinner
        android:id="@+id/main_spn_filter"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/main_lv_sessions"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_tv_filer" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:id="@+id/main_lv_sessions"

        app:layout_constraintTop_toBottomOf="@id/main_spn_filter"
        app:layout_constraintBottom_toTopOf="@id/main_ll_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin = "8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_ll_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="10"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_fab_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:contentDescription="@string/add_duration_minutes"
            android:src="@drawable/baseline_add_24" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginEnd="8dp"
            android:id="@+id/main_btn_getData"
            android:text="@string/main_get_data"
            android:padding="8dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/main_btn_profile"
            android:text="@string/btn_see_profile"
            android:padding="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>